# C-For-Embedded

./: CMakeLists.txt  README.md  binary-tree-inorder-traversal  main.c  remove_all_adjacent_duplicates_in_string
day_by_integer/: CMakeLists.txt
day_by_integer_lesson2/: CMakeLists.txt  main.c
integer_investigation_ex2/: CMakeLists.txt  main.c
leetcode/: CMakeLists.txt  main.c
leetcode/easy/: CMakeLists.txt  Find_the_Index_of_the_First_Occurrence_in_a_String.c  Majority Element.c  a.out  add_binary.c  binary-tree-inorder-traversal.c  climbing_stairs.c  climbing_stairs_not_recursive.c  happy-number.c  length_of_last_word.c  length_of_last_word_joint_exercise.c  majority-element.c  remove-duplicates_from_sorted_list.c  remove_all_adjacent_duplicates_in_string.c  remove_element.c  roman_to_integer.c  search_insert_position.c  sol  sqrt9(x).c  sqrt9(x)_better.c  valid_palindrom.c  valid_palindrome.c
leetcode/medium/: longest-palindromic-substring.c  longest-substring-without-repeating-characters.c
lesson_09/: ex01_printf_n  ex01_printf_n.c  ex02.c  ex03  ex03.c  ex04.c  ex05  ex05.c  ex05b.c  ex06  ex06.c
lesson_1/: CMakeLists.txt
lesson_10/: ex01_recur_fibo  ex01_recur_fibo.c  ex02_recur_hex  ex02_recur_hex.c  ex03  ex03.c  ex04.c  ex05  ex05.c  ex05b  ex05b.c  ex06_mystrlen  ex06_mystrlen.c  ex07_mystrcpy.c  ex08_strcat_loop  ex08_strcat_loop.c
lesson_2/: CMakeLists.txt  ex1.c
lesson_3/: CMakeLists.txt
lesson_6/: ex02_power_recursion.c
lesson_7/: a.out  ex01  ex01_power_iter.c  ex01_recursion.c  ex02  ex02_power_recur  ex02_power_recur.c  ex04_arrays  (+14 more)
(+60 files in other folders)
